--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "axios": "^1.6.2",
     "bootstrap-vue": "^2.23.1",
     "firebase": "^10.7.1",
+    "vue2-google-maps": "^0.10.7",
     "vue3-google-maps": "^0.0.1"
   }
 }
