--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.2",
+    "@googlemaps/markerclusterer": "^2.5.1",
     "axios": "^1.6.2",
     "bootstrap-vue": "^2.23.1",
     "firebase": "^10.7.1",
